bug: Store header link doesnt work on firefox
STORE PAGE: Broken link

--- a/src/pages/Splash/Splash.module.scss
+++ b/src/pages/Splash/Splash.module.scss
@@ -24,6 +24,10 @@
   @include medium {
     margin: 0 0 45px;
   }
+
+  &:hover {
+    color: $color-black-35;
+  }
 }
 
 .video {
